# dolibarr-api-rs

./: Cargo.toml
src/: lib.rs
