[package]
name = "dolibarr"
version = "0.1.0"
authors = ["Rémi Caillot <r.caillot@maformationofficinale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"